--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.5",
+    "react-pdf": "^1.8.3",
     "react-scripts": "1.0.11",
     "redux": "^3.7.2",
     "video.js": "^6.2.5"
