--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jaruserickson.com",
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
@@ -13,6 +15,8 @@
     "video.js": "^6.2.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
